--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.4",
+    "quasar": "^2.12.0",
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.3.3",
     "@vitejs/plugin-vue": "^4.1.0",
+    "sass": "^1.32.12",
     "vite": "^4.3.2"
   }
 }
